--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,12 +19,12 @@ def apiKey = getApiKey()
 
 android {
     namespace 'com.clement.newsapp'
-    compileSdk 33
+    compileSdk rootProject.compileSdkVersion
 
     defaultConfig {
         applicationId 'com.clement.newsapp'
-        minSdk 24
-        targetSdk 33
+        minSdk rootProject.minSdkVersion
+        targetSdk rootProject.compileSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -62,43 +62,39 @@ android {
 }
 
 dependencies {
-    implementation project(path: ':domain')
-    implementation project(path: ':data')
+    implementation project(path: ':core-ui')
+    implementation project(path: ':feature-headlines')
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.core:core-ktx:$core_ktx_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     // Compose
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation "androidx.activity:activity-compose:$activity_compose_version"
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.2.0'
+    implementation "androidx.compose.material:material:$material_version"
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation 'androidx.navigation:navigation-runtime-ktx:2.4.1'
 
-    // Koin
-    implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "io.insert-koin:koin-androidx-compose:$koin_version"
-
     // Hilt
-    implementation ("com.google.dagger:hilt-android:$hilt_version")
+    implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
-    implementation('androidx.hilt:hilt-navigation-compose:1.0.0')
+    implementation "androidx.hilt:hilt-navigation-compose:$hilt_navigation_compose_version"
 
     // Coil
     implementation('io.coil-kt:coil-compose:2.0.0')
 
     // Test implementation
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation "junit:junit:$junit_version"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version"
 
     // Accompanist
-    implementation "com.google.accompanist:accompanist-navigation-animation:0.30.1"
+    implementation "com.google.accompanist:accompanist-navigation-animation:$accompanist_version"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_core_version"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
