--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,18 @@
 buildscript {
     ext {
+        compileSdkVersion = 34
+        minSdkVersion = 24
         compose_ui_version = '1.3.3'
+        activity_compose_version = '1.3.1'
+        material_version = '1.3.0'
+        core_ktx_version = '1.7.0'
         koin_version= '3.1.2'
         coroutine_version = '1.5.1'
         hilt_version = '2.44'
+        hilt_navigation_compose_version = '1.0.0'
+        junit_version = '4.13.2'
+        espresso_core_version = '3.4.0'
+        accompanist_version = '0.30.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
