--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     implementation ("com.google.dagger:hilt-android:$hilt_version")
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation('androidx.hilt:hilt-navigation-compose:1.0.0')
+
+    testImplementation "junit:junit:$junit_version"
 }
